# wai-middleware-travisci

./: .travis.yml  print-pubkey.hs  wai-middleware-travisci-webhook.cabal  wai-middleware-travisci.cabal
Network/Wai/Middleware/: TravisCI.hs
