cabal-version: 2.0

name: wai-middleware-travisci-webhook
version: 0.1.0
synopsis: WAI middleware for authenticating webhook payloads from Travis CI
description: >
  WAI middleware for authenticating webhook payloads from Travis CI.
  .
  Documentation on the authentication algorithm used can be found at
  <https://docs.travis-ci.com/user/notifications/#Verifying-Webhook-requests>
homepage: https://github.com/mitchellwrosen/wai-middleware-travisci-webhook
license: BSD3
license-file: LICENSE
author: Mitchell Rosen
maintainer: mitchellwrosen@gmail.com
copyright: 2018 Mitchell Rosen
category: Web
build-type: Simple

library
  build-depends:
      base >= 4.9 || ^>= 4.11
    , wai ^>= 3.2
  ghc-options: -Wall -Wcompat
  exposed-modules: Network.Wai.Middleware.TravisCI
  default-language: Haskell2010
