cabal-version: 2.0

name: wai-middleware-travisci
version: 0.1.0
synopsis: WAI middleware for authenticating webhook payloads from Travis CI
description:
  WAI middleware for authenticating webhook payloads from Travis CI.
  .
  See <https://docs.travis-ci.com/user/notifications/#Configuring-webhook-notifications>
  for more information about Travis CI webhooks.
  .
  An extended example is given in "Network.Wai.Middleware.TravisCI"
  /FIXME/ Write example
  .
homepage: https://github.com/mitchellwrosen/wai-middleware-travisci
license: BSD3
license-file: LICENSE
author: Mitchell Rosen
maintainer: mitchellwrosen@gmail.com
copyright: 2018 Mitchell Rosen
category: Web
build-type: Simple
tested-with: GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.2

library
  -- FIXME better bounds
  build-depends:
      aeson >= 0.8
    , base == 4.9.* || == 4.10.* || ^>= 4.11
    , base64-bytestring ^>= 1.0
    , bytestring ^>= 0.10
    , cryptonite ^>= 0.25
    , http-types ^>= 0.12
    , transformers >= 0.2
    , text
    , vault
    , wai ^>= 3.2
  ghc-options: -Wall -Wcompat
  exposed-modules: Network.Wai.Middleware.TravisCI
  default-language: Haskell2010
